--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   # We do not use Travis python, but list the version that tested
 #  - "2.6"
-#  - "2.7"
+  - "2.7"
 #  - "3.3"
   - "3.4"
   - "3.5"
@@ -38,7 +38,7 @@ install:
 
 script:
   # Your test script goes here
-  - py.test
+  - pytest
 
 notifications:
   email: false
