--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,27 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.4, 3.5, 3.6]
+        python-version: [3.8, 3.9, 3.10, 3.11]
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Miniconda and create environment
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          activate-environment: test-environment
 
-      - name: Configure conda
-        run: conda config --set always_yes yes --set changeps1 no
-
-      - name: Show conda info
-        run: conda info -a
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: conda install numpy matplotlib pytest
+        run: pip install numpy matplotlib pytest
 
       - name: Install package
         run: python setup.py install
