--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,9 @@ name = wiggle
 version = 0.1.0
 maintainer = Lijun Zhu
 maintainer_email = gatechzhu@gmail.com
-description = A short description of wiggle.
-long_description = file: README.rst
+description = Wiggle Plot for Seismic Data Section
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/gatechzhu/wiggle
 download_url = https://github.com/gatechzhu/wiggle/releases
 license = MIT
@@ -13,13 +14,10 @@ classifiers =
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.4
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Software Development
     Topic :: Scientific/Engineering
     Operating System :: Microsoft :: Windows
@@ -28,9 +26,8 @@ classifiers =
     Operating System :: MacOS
 
 [options]
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
+python_requires = >=3.8, <3.12
 packages = find:
-test_suite = tests
 setup_requires =
     numpy>=1.8.2
     matplotlib>=2.0.0
