REF: update setup.cfg to specify Python version requirements and remove version check from setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,6 @@ classifiers =
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
@@ -26,7 +25,7 @@ classifiers =
     Operating System :: MacOS
 
 [options]
-python_requires = >=3.8, <3.12
+python_requires = >3.8, <3.12
 packages = find:
 setup_requires =
     numpy>=1.8.2
