--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "wiggle"
-version = "0.1.0"
+version = "0.1.1"
 description = "Wiggle Plot for Seismic Data Section"
 readme = "README.md"
 authors = [
@@ -21,3 +21,9 @@ dependencies = [
 dev = [
     "pytest>=8.3.5",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
