--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,7 +41,8 @@ jobs:
         run: uv run pytest tests
 
 
-  publish:
+  publish-test:
+    if: startsWith(github.ref, 'refs/tags/v') && (contains(github.ref, '-rc') || contains(github.ref, '-alpha') || contains(github.ref, '-beta'))
     runs-on: ubuntu-latest
     needs: tests
 
@@ -53,6 +54,9 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
+
+      - name: Build Python package
+        run: uv build
 
       - name: Publish to PyPI test
         run: uv publish --index testpypi
