--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,10 +41,13 @@ jobs:
         run: uv run pytest tests
 
 
-  publish-test:
+  testpypi_publish:
     if: startsWith(github.ref, 'refs/tags/v') && (contains(github.ref, '-rc') || contains(github.ref, '-alpha') || contains(github.ref, '-beta'))
     runs-on: ubuntu-latest
     needs: tests
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
