--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "wiggle"
-version = "0.1.1"
+# version = "0.1.1"
+dynamic = ["version"]
 description = "Wiggle Plot for Seismic Data Section"
 readme = "README.md"
 authors = [
@@ -22,8 +23,12 @@ dev = [
     "pytest>=8.3.5",
 ]
 
-[[tool.uv.index]]
+[tool.uv.index]
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
 explicit = true
+
+[tool.setuptools_scm]
+version_scheme = "relesae-branch-semver"
+lcoal_scheme = "no-local-version"
