--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dev = [
     "pytest>=8.3.5",
 ]
 
-[tool.uv.index]
+[[tool.uv.index]]
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
@@ -31,4 +31,4 @@ explicit = true
 
 [tool.setuptools_scm]
 version_scheme = "relesae-branch-semver"
-lcoal_scheme = "no-local-version"
+local_scheme = "no-local-version"
