--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
 
 
   testpypi_publish:
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-rc')
     runs-on: ubuntu-latest
     needs: tests
     permissions:
@@ -64,5 +64,31 @@ jobs:
       - name: Build Python package
         run: uv build
 
-      - name: Publish to PyPI test
+      - name: Publish to Test PyPI (RC)
         run: uv publish --index testpypi
+
+  pypi_publish:
+    if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-rc')
+    runs-on: ubuntu-latest
+    needs: tests
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure full Git history for setuptools_scm to read tags
+
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Build Python package
+        run: uv build
+
+      - name: Publish to PyPI
+        run: uv publish
